@@ -11,7 +11,7 @@
      <_title>Connect 4 (2 Players)</_title>
      <_description>Arrange four coins in a row</_description>
      <_prerequisite>Mouse-manipulation</_prerequisite>
-     <_goal>Create a line of 4 pieces either horizontally (lying down) or vertically (standing up)</_goal>
+     <_goal>Create a line of 4 pieces either horizontally (lying down) or vertically (standing up) or diagonally.</_goal>
      <_manual>Click the position in the line where you want to drop a piece. You can also use the arrow keys to move the piece left or right, and the down or space key to drop a piece.</_manual>
      <_credit>The original code was written in 2005 by Laurent Lacheny. In 2006, Miguel de Izarra made the two players game. Images and Artificial Intelligence taken from project 4stattack by Jeroen Vloothuis. The original project can be found on &lt;http://forcedattack.sourceforge.net&gt;</_credit>
   </Board>
